# StudentManager

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  StudentManager.cpp  StudentManager.h  StudentManager.hpp
include/core/: data_base.hpp
include/data/: rules.hpp  student_data.hpp  students.hpp
include/ui/: DevelopWindow.hpp  accomplishment.hpp  operate.hpp  student_list.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  data_base.cpp
src/data/: CMakeLists.txt  rules.cpp  student_data.cpp  students.cpp
src/ui/: CMakeLists.txt  DevelopWindow.cpp  accomplishment.cpp  operate.cpp  student_list.cpp
